--- a/eyelashes/client/static/client/css/bookstyle.css
+++ b/eyelashes/client/static/client/css/bookstyle.css
@@ -203,6 +203,32 @@ td > a:hover{
     color: #FF5555;
 }
 
+.postscriptum{
+    background-color: #F7F7F7;
+    position: relative;
+    width: 100%;
+
+    padding: 0 0 50px 0;
+}
+
+.paragraph_ps{
+    background-color: #FEFEFE;
+    border: solid 1px #f2f2f2;
+    box-shadow: 0 2px 10px #000;
+
+    position: relative;
+
+    width: 75%;
+    left: 10%;
+
+    padding: 25px;
+
+    font-family: Tahoma;
+    font-size: 16px;
+    color: #696969;
+
+}
+
 footer > nav{
     text-align: left;
 }
