--- a/eyelashes/client/templates/client/manager.html
+++ b/eyelashes/client/templates/client/manager.html
@@ -1,17 +1,5 @@
 {% extends 'client/base.html' %}
 {% load static %}
-{% block tittle %} {{the_tittle}} {% endblock %}
-{% block stylelink %}
-<link rel="stylesheet" href="{% static 'client/css/managerstyle.css' %}">
-<script>
-    var csrf = "{{ csrf_token }}";
-    var remove_client_link = "{% url 'manager_remove_client' %}";
-    var change_link = "{% url 'manager_change_client' %}";
-    var remove_booking_link = "{% url 'manager_remove_booking' %}";
-</script>
-<script src="{% static 'client/scripts/manager.js' %}"></script>
-<script src="{% static 'client/scripts/managerEvent.js' %}" defer></script>
-{% endblock %}
 {% block body %}
 {% if messages %}
     {% for message in messages %}
@@ -24,139 +12,11 @@
         <a href="{% url 'manager_loging_out' %}">Выйти</a>
     </nav>
 </header>
-<div class="main_manager">
-    <div class="headingH1">Страница менеджера</div>
-    <div id="tittleClientsBlock" onclick="onClickTab(id)">Клиенты</div>
-    <div id="tittleBookingBlock" onclick="onClickTab(id)">Бронирование</div>
-    <div id="tittleCalendarBlock" onclick="onClickTab(id)">Календарь</div>
-    <div id="clientsBlock">
-        <input id="searchClient" name="search" placeholder="поиск" type="text"/>
-        <button id="addClientButton" onclick="changeHiddenAddClient()">Добавить пользователя</button>
-        <button id="removeClientButton" onclick="removeClient()">Удалить выбранных пользователей</button>
-        <br/>
-        <div id="addClientBlock" hidden>
-            <form action="{% url 'manager_add_client' %}" method="POST" onsubmit="return formClientValidator(this)">
-                {% csrf_token %}
-                <input id="clientAddName" name="clientAddName" placeholder="Имя" type="text" required/><br/>
-                <input id="clientAddTel" name="clientAddTel" placeholder="Телефон" type="text" maxlength="13" oninput="checkPhone()"  required/>
-                <label><input id="clientAddBan" name="clientAddBan" type="checkbox"/>Бан</label><br/>
-                <textarea name="clientAddHistory" class="client_history" placeholder="Логи клиента"></textarea><br/>
-                <input name="clientsBlock" value="Добавить пользователя" type="submit"/>
-            </form>
-        </div>
-        <br/>
-        <table>
-            <tr>
-                <th> <input id="clients_choose" type="checkbox" onclick="onClickCheckClient(id)"/> </th>
-                <th>ID</th>
-                <th>Имя</th>
-                <th>Телефон</th>
-                <th>Бан</th>
-                <th>История</th>
-                <!--<th>Изменить</th>-->
-            </tr>
-            {% for client in clients %}
-            <tr>
-                <td class="tableCheckClient">
-                    <input id="{{client.phone}}" class="checkbox_client" type="checkbox"/>
-                </td>
-                <td class="tableIDClient">
-                    {{client.id}}
-                </td>
-                <td class="tableNameClient">
-                    <div id="table{{client.phone}}Name">{{client.name}}</div>
-                </td>
-                <td class="tableTelClient">
-                    <div id="table{{client.phone}}Tel">{{client.phone}}</div>
-                </td>
-                <td class="tableBanClient">
-                    <button onclick="changeBanClient({{client.phone}})">
-                    {% if client.ban %}
-                    Unban
-                    {% else %}
-                    Ban
-                    {% endif %}
-                    </button>
-                </td>
-                <td class="tableHistoryClient">
-                    {{client.history}}
-                </td>
-                <!--<td>
-                    Не использовать
-                    <button id="edit{{client.phone}}Button" class="edit_client_button" onclick="editClient({{client.phone}})">Редактировать</button>
-                    <button id="change{{client.phone}}Button" class="change_client_button" onclick="changeClient({{client.phone}})" hidden>Изменить</button>
-                </td>-->
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
-    <div id="bookingBlock" hidden>
-        <input id="searchBooking" name="search" placeholder="поиск" type="text"/>
-        <button id="addBookingButton" onclick="changeHiddenAddBooking()">Добавить новые записи</button>
-        <button id="removeBookingButton" onclick="removeBooking()">Удалить выбранные записи</button>
-        <br/>
-        <div id="addBookingBlock" hidden>
-            <form id="formAddBooking" action="{% url 'manager_add_booking' %}" method="POST">
-                {% csrf_token %}
-                <p id="pTime">Время:</p>
-                <input id="time" class="inputTime" name="time" type="time" required/>
-                <button id="addTimeBooking" onclick="addTimesBookingButton(this)" type="button">+</button>
-                <br/>
-                <p>Дата начала: <input name="startDate" type="date" required/> </p>
-                <p>Дата конца: <input name="endDate" type="date" required/> </p>
-                <input name="bookingBlock" value="Добавить запись(и)" type="submit"/>
-            </form>
-        </div>
-        <br/>
-        <table>
-            <tr>
-                <th> <input id="booking_choose" type="checkbox" onclick="onClickCheckBooking(this)"/> </th>
-                <th>ID</th>
-                <th>Дата</th>
-                <th>Время</th>
-                <th>Клиент</th>
-                <th>Телефон</th>
-                <th>Комментарий</th>
-            </tr>
-            {% for book in booking %}
-            <tr>
-                <td class="tableCheckClient">
-                    <input id="check{{book.id}}" class="checkbox_booking" type="checkbox"/>
-                </td>
-                <td class="tableIDClient">
-                    {{book.id}}
-                </td>
-                <td class="tableDateBooking">
-                    {{book.datetime.date}}
-                </td>
-                <td class="tableTimeBooking">
-                    {{book.datetime.time}}
-                </td>
-                <td class="tableNameClient">
-                    <div>{{book.client.name}}</div>
-                </td>
-                <td class="tableTelClient">
-                    <div>{{book.client.phone}}</div>
-                </td>
-                <td class="tableCommentClient">
-                    <div>{{book.comment}}</div>
-                </td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
-    <div id="calendarBlock" hidden>
-        Calendar
-    </div>
-</div>
+{% block table%}
+{% endblock %}
 <footer>
     <nav>
         <a href="/admin/">Для администратора</a>
     </nav>
 </footer>
-{% if tab %}
-    <script>
-        onClickTab("{{tab}}");
-    </script>
-{% endif %}
 {% endblock %}
