pre-version-1.03 Added calendar on manager page Fixed derivation of months, now the calculation starts from the current month and year, and ends with the previous month of the next year. Now the list of free options is sorted on the server side.

--- a/eyelashes/client/templates/client/filling_book.html
+++ b/eyelashes/client/templates/client/filling_book.html
@@ -28,7 +28,7 @@
 <!--<footer>
     <nav>
         <a href="/admin/">Для администратора</a>
-        <a href="{% url 'manager_page' %}">Для менеджера</a>
+        <a href="{% url 'manager_clients_table' %}">Для менеджера</a>
     </nav>
 </footer>-->
 {% endblock %}
