--- a/eyelashes/client/static/client/css/managercalendarstyle.css
+++ b/eyelashes/client/static/client/css/managercalendarstyle.css
@@ -1,4 +1,3 @@
-
 header, footer{
     background-color: #FEFEFE;
     position: relative;
@@ -29,23 +28,17 @@ nav > a:hover{
     color: #FF5555;
 }
 
-.booking{
-    background-color: #F7F7F7;
-    position: relative;
-    width: 100%;
-    height: 120%;
-    min-height: 100vh;
+.main_manager {
 
-    padding: 0 0 50px 0;
 }
 
-.heading{
+.headingH1 {
     position: relative;
     width: 50%;
-    left: 10%;
+    left: 9%;
 
     font-family: Tahoma;
-    font-size: 20px;
+    font-size: 30px;
     color: #696969;
     letter-spacing: 3px;
 
@@ -54,45 +47,82 @@ nav > a:hover{
     padding: 25px 0;
 }
 
-.choose_book{
-    background-color: #FEFEFE;
-    border: solid 1px #f2f2f2;
-    box-shadow: 0 2px 10px #000;
-
+.tittleBlock {
     position: relative;
+    display: inline-block;
+    width: 150px;
+    left: 5%;
+    top: 0;
 
-    width: 75%;
-    height: 50%;
-    min-height: 500px;
-    left: 10%;
+    background-color: #DDDDDD;
+    border: 2px solid #444444;
+    border-bottom: none;
+    border-radius: 5px 5px 0 0;
 
-    padding: 25px;
-}
-
-#selectMonth {
-    position: relative;
-
-    width: 250px;
-    height: 40px;
-    margin: 0 0 20px 0;
+    font-family: Tahoma;
+    font-size: 16px;
+    color: #696969;
 
     text-align: center;
 
-    background: #efefef;
-    border: 3px solid #dddddd;
+    text-shadow: 1px 1px 1px #020202;
+    padding: 5px 0;
+
+    cursor: pointer;
+
+    -ms-user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
 }
 
-#selectMonth:hover {
-    box-shadow: 0 0 5px #000000;
+/*Client Block*/
+
+#tittleMainBlock {
+    background-color: #FAFAFA;
 }
 
-#selectMonth:active {
-    background: #AAAAAA;
-    color: #AAAAAA;
-    box-shadow: inset 0 0 5px #000000;
+.tittleBlock:hover {
+    box-shadow: 0 0 5px #303030;
 }
 
-#selected{
+.tittleBlock:active {
+    background-color: #EEEEEE;
+    box-shadow: 0 0 10px #303030, inset 0 0 10px #303030;
+}
+
+#calendarBlock {
+    position: relative;
+    width: 90%;
+    left: 5%;
+    top: 0;
+
+    background-color: #FAFAFA;
+    border: 2px solid #444444;
+    border-radius: 0 10px 5px 5px;
+
+    margin: 0 0 25px 0;
+    padding: 25px 0;
+}
+
+#selectMonthYear, #selectedYear, #btnSelect{
+    display: inline-block;
+
+    position: relative;
+    width: 26%;
+    left: 4%;
+
+    font-family: Tahoma;
+    font-size: 16px;
+    color: #696969;
+
+    text-shadow: 0 0 1px #020202;
+    box-shadow: 0 0 2px #000000;
+
+    margin: 0 2%;
+}
+
+#selectedMonth{
     font-family: Tahoma;
     font-size: 20px;
     color: #696969;
@@ -107,57 +137,13 @@ nav > a:hover{
 	user-select: none;
 }
 
-#selected:active {
-    color: white;
-}
-
-.a_choose{
-    position: relative;
-    left: -2px;
-    top: 12px;
-
-    text-decoration: none;
-}
-
-.choose_month {
-    position: relative;
-    width: 250px;
-
-    background: #FEFEFE;
-    border: 2px solid #dddddd;
-
-    text-align: center;
-
-    font-family: Tahoma;
-    font-size: 16px;
-    color: #696969;
-
-    text-shadow: 1px 1px 1px #020202;
-
-    z-index: 10;
-}
-
-.choose_month:hover {
-    border: 2px solid #444444;
-    box-shadow: 0 0 2px #000000;
-}
-
-.choose_month:active {
-    box-shadow: inset 0 0 2px #000000;
-    background: #AAAAAA;
-}
-
-.selected_month{
-    background: #efefef;
-}
-
 table {
     position: relative;
 
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    left: 5%;
 
-    margin-bottom: 20px;
+    margin: 20px 0;
 	border: 1px solid #dddddd;
 	border-collapse: collapse;
 
