--- a/eyelashes/client/templates/client/book.html
+++ b/eyelashes/client/templates/client/book.html
@@ -24,14 +24,13 @@
     </div>
     <div class="choose_book">
         <div id="selectMonth" onclick="chooseMonth()">
+            <div id="selected">{{ selected_month }}</div>
             {% for month in all_months %}
-                {%if month == choose_month %}
-                    <div id="selected">{{ month }}</div>
-                {%else%}
                 <a class="a_choose" href="{% url 'book' month %}" hidden>
-                    <div class="choose_month">{{ month }}</div>
+                    <div class="choose_month {% if month == selected_month %} selected_month{% endif%}">
+                        {{ month }}
+                    </div>
                 </a>
-                {%endif%}
             {% endfor%}
         </div>
         <table>
@@ -50,14 +49,12 @@
                 <td>
                     {% if day.0 %}
                         {{ day.0 }} <br/>
-                        {% if day.2 and cur_month == choose_month and day.0 > cur_day %}
-                            {% for k, v in day.2.items %}
-                                {% if not v %}
-                                <a href="{% url 'filling_book'%}?day={{day.0}}&month={{choose_month}}&year={{cur_year}}&time={{k}}">Свободно в {{k}}</a>
-                                <br/>
-                                {% endif %}
-                            {% endfor %}
-                        {% endif %}
+                        {% for k, v in day.2.items %}
+                            {% if not v %}
+                            <a href="{% url 'filling_book'%}?day={{day.0}}&monthYear={{selected_month}}&time={{k}}">Свободно в {{k}}</a>
+                            <br/>
+                            {% endif %}
+                        {% endfor %}
                     {% endif %}
                 </td>
                 {% endfor %}
