--- a/eyelashes/client/static/client/css/managercalendarstyle.css
+++ b/eyelashes/client/static/client/css/managercalendarstyle.css
@@ -105,7 +105,7 @@ nav > a:hover{
     padding: 25px 0;
 }
 
-#selectMonthYear, #selectedYear, #btnSelect{
+#nextMonth, #selectedYear, #prevMonth{
     display: inline-block;
 
     position: relative;
@@ -122,19 +122,8 @@ nav > a:hover{
     margin: 0 2%;
 }
 
-#selectedMonth{
-    font-family: Tahoma;
-    font-size: 20px;
-    color: #696969;
-
-    text-shadow: 1px 1px 1px #020202;
-
-    padding: 7px 0 0 0;
-
-    -ms-user-select: none;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	user-select: none;
+#selectedYear{
+    text-align: center;
 }
 
 table {
@@ -172,25 +161,12 @@ td {
     vertical-align: top;
     text-align: left;
 
+    color: #696969;
+}
+
+.p_day_table {
     font-size: 20px;
     text-shadow: 1px 1px 1px #020202;
-}
-
-td > a {
-    text-decoration: none;
-    font-size: 15px;
-    text-shadow: none;
-    color: #efefef;
-
-    text-shadow: 0 0 1px #020202;
-}
-
-td > a:link, td > a:visited{
-    color: #000000;
-}
-
-td > a:hover{
-    color: #FF5555;
 }
 
 .postscriptum{
