--- a/eyelashes/client/static/client/css/managercontactsstyle.css
+++ b/eyelashes/client/static/client/css/managercontactsstyle.css
@@ -3,12 +3,18 @@ body{
 }
 
 header, footer{
-    background-color: #FEFEFE;
+    background: linear-gradient(to right, #696969, 20%, #FEFEFE);
     position: relative;
     width: 100%;
     height: 50px;
 
-    box-shadow: inset 0 0 5px #000000;
+    box-shadow: 0 0 5px #000000;
+
+    z-index: 10;
+}
+
+footer{
+    background: linear-gradient(to left, #696969, 20%, #FEFEFE);
 }
 
 nav{
