--- a/eyelashes/client/static/client/css/homestyle.css
+++ b/eyelashes/client/static/client/css/homestyle.css
@@ -1,5 +1,7 @@
 a {
+    display: block;
     text-decoration: none;
+    width: 30%;
 }
 
 .home{
@@ -8,9 +10,7 @@ a {
     background-position-x: right;
     position: relative;
     width: 100%;
-    width-min: 1280px;
     height: 100vh;
-    height-min: 853px;
 
     left: 0;
     right: 0;
@@ -32,7 +32,7 @@ a {
 
 .name_company > p{
     font-family: Tahoma;
-    font-size: 20px;
+    font-size: 1.5vw;
     color: #696969;
     letter-spacing: 3px;
 
@@ -41,7 +41,7 @@ a {
 
 h2{
     font-family: Tahoma;
-    font-size: 40px;
+    font-size: 3vw;
     font-weight: 900;
     color: #696969;
 
@@ -52,7 +52,7 @@ h2{
 
 .button_book > p{
     font-family: Tahoma;
-    font-size: 20px;
+    font-size: 1.5vw;
     color: white;
 
     text-shadow: 1px 1px 2px black;
@@ -67,8 +67,8 @@ h2{
 
 .button_book {
     background-color: #ED0000;
-    width: 200px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
 
     box-shadow: 0 0 10px rgba(200,0,0,0.5);
     border-radius: 5px;
@@ -84,4 +84,8 @@ h2{
 .button_book:active {
     background-color: #FF0000;
     box-shadow: 0 0 12px rgba(225,0,0,0.5), inset 0 0 11px rgba(50,0,0,0.7);
+}
+
+.about {
+    display: none;
 }
