--- a/eyelashes/client/templates/client/base.html
+++ b/eyelashes/client/templates/client/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'client/css/base.css' %}">
     {% block stylelink %} {% endblock %}
     <title>{% block tittle %}{% endblock %}</title>
