--- a/eyelashes/client/templates/client/book.html
+++ b/eyelashes/client/templates/client/book.html
@@ -15,7 +15,7 @@
 <header>
     <nav>
         <a href="{% url 'home' %}">Домашняя страница</a>
-        <a href="{% url 'manager_contacts' %}">Контакты с менеджером</a>
+        <a href="{% url 'manager_contacts' %}">Контакты</a>
     </nav>
 </header>
 <div class="booking">
@@ -51,7 +51,7 @@
                     {% if day.0 %}
                     <div class="block_day" onclick="selectDay(this)">
                         <p> {{ day.0 }} </p>
-                        <p>{% if day.2.items %} Свободно {% endif %}</p>
+                        <p>{% if day.2.items %} Есть места {% endif %}</p>
                     </div>
                     <div class="block_choose_day" onclick="deselectDay(this)" hidden>
                         {{ day.0 }} {{ selected_month }} <br/>
@@ -70,11 +70,11 @@
             {% endfor %}
         </table>
     </div>
+    <div class="postscriptum">
+        <p class="paragraph_ps">* Чтобы отменить запись, свяжитесь с <a href="{% url 'manager_contacts' %}">менеджером</a> по viber или whatsapp.
+    </div>
+</div>
 
-</div>
-<div class="postscriptum">
-    <p class="paragraph_ps">* Чтобы отменить запись, свяжитесь с <a href="{% url 'manager_contacts' %}">менеджером</a> по viber или whatsapp.
-</div>
 <footer>
     <nav>
         <a href="/admin/">Для администратора</a>
