--- a/eyelashes/client/static/client/css/managerstyle.css
+++ b/eyelashes/client/static/client/css/managerstyle.css
@@ -35,16 +35,23 @@ nav > a:hover{
 }
 
 .main_manager {
+    background-color: #F7F7F7;
+    position: relative;
+    width: 100%;
+    min-height: calc(100vh - 150px);
 
+    font-size: 0;
+
+    padding-bottom: 50px;
 }
 
 .headingH1 {
     position: relative;
-    width: 50%;
-    left: 9%;
+    width: 80%;
+    left: 10%;
 
     font-family: Tahoma;
-    font-size: 30px;
+    font-size: 2.5vw;
     color: #696969;
     letter-spacing: 3px;
 
@@ -56,7 +63,7 @@ nav > a:hover{
 .tittleBlock {
     position: relative;
     display: inline-block;
-    width: 150px;
+    width: 12vw;
     left: 5%;
     top: 0;
 
@@ -66,13 +73,14 @@ nav > a:hover{
     border-radius: 5px 5px 0 0;
 
     font-family: Tahoma;
-    font-size: 16px;
+    font-size: 1.4vw;
     color: #696969;
 
     text-align: center;
 
     text-shadow: 1px 1px 1px #020202;
     padding: 5px 0;
+    margin: 0 5px 0 0;
 
     cursor: pointer;
 
@@ -118,7 +126,7 @@ nav > a:hover{
     left: 4%;
 
     font-family: Tahoma;
-    font-size: 16px;
+    font-size: 1.3vw;
     color: #696969;
 
     text-shadow: 0 0 1px #020202;
@@ -161,7 +169,7 @@ nav > a:hover{
     left: 35%;
 
     font-family: Tahoma;
-    font-size: 16px;
+    font-size: 1.3vw;
     color: #696969;
 
     text-shadow: 0 0 1px #020202;
@@ -189,13 +197,16 @@ nav > a:hover{
     margin: 25px 5px;
 }
 
-table {
+.tableDivStyle{
     position: relative;
 
     width: 90%;
     left: 5%;
 
     margin: 20px 0;
+}
+
+table {
 	border: 1px solid #dddddd;
 	border-collapse: collapse;
 
@@ -208,7 +219,7 @@ th {
 
 	padding: 7px;
 
-    font-size: 20px;
+    font-size: 1.4vw;
     text-shadow: 1px 1px 1px #020202;
     color: #696969;
 
@@ -218,7 +229,7 @@ th {
 td {
     border: 1px solid #dddddd;
 
-    font-size: 16px;
+    font-size: 1.2vw;
 }
 
 .tableCheckClient, .tableIDClient, .tableBanClient{
@@ -232,7 +243,7 @@ td {
 
 .tableIDClient, .tableNameClient > div, .tableTelClient > div, .tableHistoryClient,
 .tableDateBooking, .tableTimeBooking{
-    font-size: 16px;
+    font-size: 1.2vw;
     text-shadow: 0 0 1px #020202;
 }
 
@@ -242,7 +253,7 @@ td {
 
 .tableBanClient > button{
     font-family: Tahoma;
-    font-size: 14px;
+    font-size: 1.2vw;
     color: #696969;
 
     box-shadow: 0 0 2px #000000;
@@ -255,7 +266,7 @@ td {
 
 .tableCommentClient > div{
     font-family: Tahoma;
-    font-size: 16px;
+    font-size: 1.2vw;
     text-shadow: 0 0 1px #020202;
 }
 
@@ -264,7 +275,7 @@ td {
     position: relative;
 
     font-family: Tahoma;
-    font-size: 16px;
+    font-size: 1.2vw;
     text-shadow: 0 0 1px #020202;
 
     margin: 5px;
@@ -275,7 +286,7 @@ td {
 
 .inputTime, .removeTimeButton, #addTimeBooking{
     font-family: Tahoma;
-    font-size: 16px;
+    font-size: 1.2vw;
     text-shadow: 0 0 1px #020202;
 }
 
