--- a/eyelashes/client/static/client/css/mmanagerstyle.css
+++ b/eyelashes/client/static/client/css/mmanagerstyle.css
@@ -9,11 +9,12 @@
         font-size: 3vw;
     }
 
-    #clientsBlock{
+    #clientsBlock, #bookingBlock{
         border-radius: 0 0 5px 5px;
     }
 
-    #searchClient, #searchClientButton, #addClientButton, #removeClientButton{
+    #searchClient, #searchClientButton, #addClientButton, #removeClientButton,
+    #searchBooking, #searchBookingButton, #addBookingButton, #removeBookingButton{
         width: 90%;
         left: 5%;
 
@@ -22,11 +23,11 @@
         margin: 0 0;
     }
 
-    #searchClient{
+    #searchClient, #searchBooking{
         width: 70%;
     }
 
-    #searchClientButton{position: absolute;
+    #searchClientButton, #searchBookingButton {
         position: absolute;
         top: 25px;
         left: auto;
@@ -34,7 +35,7 @@
         width: 10%;
     }
 
-    #addClientButton, #removeClientButton{
+    #addClientButton, #removeClientButton, #addBookingButton, #removeBookingButton {
         display: block;
 
         margin-top: 20px;
@@ -55,6 +56,10 @@
         max-height: 100px;
     }
 
+    #formAddBooking * {
+        font-size: 4vw;
+    }
+
     .tableDivStyle{
         overflow-y: auto;
     }
@@ -67,17 +72,32 @@
         font-size: 3.5vw;
     }
 
-    .tableNameClient > div, .tableTelClient > div, .tableHistoryClient, .tableBanClient > button{
+    .tableNameClient > div, .tableTelClient > div, .tableHistoryClient, .tableBanClient > button,
+    .tableDateBooking > div, .tableTimeBooking > div, .tableCommentClient > div{
         font-size: 2.5vw;
     }
 
     table{
          table-layout: fixed;
+
+         width: auto;
     }
 
     .tableHistoryClient{
         width: 300px;
 
         padding: 4px 7px;
+    }
+
+    .tableDateBooking > div{
+        width: 100px;
+    }
+
+    .tableNameClient > div {
+        width: 50px;
+    }
+
+    .tableCommentClient > div{
+        width: 300px;
     }
 }
