--- a/eyelashes/client/static/client/css/managercalendarstyle.css
+++ b/eyelashes/client/static/client/css/managercalendarstyle.css
@@ -35,16 +35,23 @@ nav > a:hover{
 }
 
 .main_manager {
+    background-color: #F7F7F7;
+    position: relative;
+    width: 100%;
+    min-height: calc(100vh - 150px);
 
+    font-size: 0;
+
+    padding-bottom: 50px;
 }
 
 .headingH1 {
     position: relative;
-    width: 50%;
-    left: 9%;
+    width: 80%;
+    left: 10%;
 
     font-family: Tahoma;
-    font-size: 30px;
+    font-size: 2.5vw;
     color: #696969;
     letter-spacing: 3px;
 
@@ -56,7 +63,7 @@ nav > a:hover{
 .tittleBlock {
     position: relative;
     display: inline-block;
-    width: 150px;
+    width: 12vw;
     left: 5%;
     top: 0;
 
@@ -66,13 +73,14 @@ nav > a:hover{
     border-radius: 5px 5px 0 0;
 
     font-family: Tahoma;
-    font-size: 16px;
+    font-size: 1.4vw;
     color: #696969;
 
     text-align: center;
 
     text-shadow: 1px 1px 1px #020202;
     padding: 5px 0;
+    margin: 0 5px 0 0;
 
     cursor: pointer;
 
@@ -119,7 +127,7 @@ nav > a:hover{
     left: 4%;
 
     font-family: Tahoma;
-    font-size: 16px;
+    font-size: 1.3vw;
     color: #696969;
 
     text-shadow: 0 0 1px #020202;
@@ -132,13 +140,18 @@ nav > a:hover{
     text-align: center;
 }
 
-table {
+.tableDivStyle{
     position: relative;
 
     width: 90%;
     left: 5%;
 
     margin: 20px 0;
+}
+
+table {
+    width: 100%;
+
 	border: 1px solid #dddddd;
 	border-collapse: collapse;
 
@@ -152,14 +165,14 @@ th {
 	background: #efefef;
 	border: 1px solid #dddddd;
 
-    font-size: 20px;
+    font-size: 1.5vw;
     text-shadow: 1px 1px 1px #020202;
     color: #696969;
 }
 
 td {
     width: 14%;
-    height: 80px;
+    height: 7vw;
 
     border: 1px solid #dddddd;
 	padding: 5px;
@@ -170,8 +183,12 @@ td {
     color: #696969;
 }
 
+td > p {
+    font-size: 1.1vw;
+}
+
 .p_day_table {
-    font-size: 20px;
+    font-size: 1.4vw;
     text-shadow: 1px 1px 1px #020202;
 }
 
