--- a/eyelashes/client/templates/client/manager_calendar.html
+++ b/eyelashes/client/templates/client/manager_calendar.html
@@ -3,6 +3,7 @@
 {% block tittle %} {{the_tittle}} {% endblock %}
 {% block stylelink %}
 <link rel="stylesheet" href="{% static 'client/css/managercalendarstyle.css' %}">
+<link rel="stylesheet" href="{% static 'client/css/mmanagercalendarstyle.css' %}">
 <script src="{% static 'client/scripts/manager_calendar.js' %}"></script>
 {% endblock %}
 {% block table%}
@@ -12,21 +13,12 @@
     <a href="{% url 'manager_booking_table' %}"><div class="tittleBlock">Бронирование</div></a>
     <div class="tittleBlock" id="tittleMainBlock">Календарь</div>
     <div id="calendarBlock">
-        <!--<div id="selectMonthYear" onclick="chooseMonth()">
-            <div id="selectedMonth">{{ selected_month }}</div>
-            {% for month in all_months %}
-                <div class="choose_month" onclick="selectNewMonth(this)" hidden>
-                    {{ month }}
-                </div>
-            {% endfor%}
-        </div>
-        <input id="selectedYear" type="number" maxlength="4" step="1" value="{{ selected_year }}"/>
-        <input id="btnSelect" type="button" value="Выбрать" onclick="selectMonthYear()"/>-->
         <button id="prevMonth" onclick="prevMonth('{{selected_month}}',{{selected_year}},{{all_months}})">Предыдущий месяц</button>
         <input id="selectedYear" value="{{ selected_month }} {{ selected_year }}" disabled/>
         <button id="nextMonth" onclick="nextMonth('{{selected_month}}',{{selected_year}},{{all_months}})">Следующий месяц</button>
 
-        <table>
+        <div class="tableDivStyle">
+            <table>
             <tr>
                 <th>ПН</th>
                 <th>ВТ</th>
@@ -55,6 +47,7 @@
             </tr>
             {% endfor %}
         </table>
+        </div>
     </div>
 </div>
 {% endblock%}
