pre-version-1.07 Add page "About". In mobile version "About" is in home page as block div.

--- a/eyelashes/client/templates/client/home.html
+++ b/eyelashes/client/templates/client/home.html
@@ -16,7 +16,11 @@
             <p>Забронировать</p>
         </div></a>
         <div class="about">
-            О сайте
+            <p>О сайте</p>
+            Сайт предназначен для бронирования записи наращивания ресниц. Вы можете найти на сайте информацию
+            о текущих свободных записей, выбрать один из них и забронировать. На сайте также есть страница контактов,
+            на случай если нужно отменить бронирование, сообщить об ошибки сайта или связаться с администратором.
+            Отдел сайта "для дминистратора" предназначен только администратору. Пожалуйста, соблюдайте правила сайта.
         </div>
     </div>
 </div>
