--- a/eyelashes/client/static/client/css/mhomestyle.css
+++ b/eyelashes/client/static/client/css/mhomestyle.css
@@ -37,13 +37,28 @@
     }
 
     .about {
-        /*display: block;*/
+        display: block;
         position: relative;
 
         left: 0;
         top: 0;
 
-        margin: 0;
+        margin: 50px 0;
         padding: 0;
+
+        text-align: center;
+
+        font-family: Tahoma;
+        font-size: 4vw;
+        color: #696969;
+
+        text-shadow: 1px 1px 1px #020202;
+    }
+
+    .about > p{
+        font-family: Tahoma;
+        font-weight: bold;
+        font-size: 7vw;
+        color: #696969;
     }
 }
