--- a/eyelashes/client/templates/client/manager_contacts.html
+++ b/eyelashes/client/templates/client/manager_contacts.html
@@ -16,6 +16,12 @@
         <p>Пожалуйста, не звоните, а пишите через viber или whatsapp.</p>
         <p>Номер телефона: +375 (11) 11 11 111 </p>
         <p>Ссылка в VK: <a href="https://vk.com/">ВКонтакте</a></p>
+        <H2>О сайте</H2>
+        <p class="about">Сайт предназначен для бронирования записи наращивания ресниц. Вы можете найти на сайте информацию
+            о текущих свободных записей, выбрать один из них и забронировать. На сайте также есть страница контактов,
+            на случай если нужно отменить бронирование, сообщить об ошибки сайта или связаться с администратором.
+            Отдел сайта "для дминистратора" предназначен только администратору. Пожалуйста, соблюдайте правила сайта.
+        </p>
     </div>
 </div>
 
