--- a/eyelashes/client/templates/client/book.html
+++ b/eyelashes/client/templates/client/book.html
@@ -51,7 +51,7 @@
                     {% if day.0 %}
                     <div class="block_day" onclick="selectDay(this)">
                         <p> {{ day.0 }} </p>
-                        <p>{% if day.2.items %} Есть места {% endif %}</p>
+                        <p>{% if v in day.2.values %} Есть места {% endif %}</p>
                     </div>
                     <div class="block_choose_day" onclick="deselectDay(this)" hidden>
                         {{ day.0 }} {{ selected_month }} <br/>
